# Yoshinani_Report_SONTA-kun

./: .env.example  .gitignore  CLAUDE.md  README.md  plan.md  pyproject.toml  requirements.txt  sample_todo.xlsx
src/sonta_kun/: __init__.py  __main__.py  bedrock_client.py  cli.py  config.py  diff_analyzer.py  excel_reader.py  file_handler.py  output_formatter.py  profile_manager.py  prompt_builder.py  report_generator.py  report_storage.py
src/sonta_kun/gui/: __init__.py  main_window.py  settings_window.py
tests/: test_bedrock_client.py  test_config.py  test_diff_analyzer.py  test_excel_reader.py  test_output_formatter.py  test_profile_manager.py  test_report_storage.py
